// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test navigation > Does render finish button last item 1`] = `
<body>
  <div>
    
    <div
      class="navigator"
    >
      <div
        class="button-container end"
      >
        <button
          aria-label="Exit test review"
          class="actionable secondary pill medium"
          name="finish"
          type="button"
        >
          
           
          
           
          Exit test review
          
        </button>
        
      </div>
       
      <div
        class="button-container start"
      >
        <button
          aria-label="Go to previous question"
          class="actionable secondary circular medium"
          name="prev"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon medium rtl-flip"
            viewBox="0 0 16 16"
          >
            <title>
              Arrow left icon
            </title>
            <path
              d="M7.7-.13l2 2-4.5 4.5h10.5v3H5.2l4.5 4.5-2 2-8-8 8-8z"
              fill-rule="evenodd"
            />
            
          </svg>
          
           
          
           
          
        </button>
        
      </div>
       
      
       
      
      <div
        class="progress-container"
      >
        <div
          class="width-tracker"
        >
          <div
            class="steps-container"
          >
            <div
              class="more"
            >
              
            </div>
            
             
            
             
            <div
              class="more"
            >
              
            </div>
            
          </div>
           
          <span
            class="overview-container"
          >
            <button
              aria-label="Open overview of all 3 questions"
              class="actionable secondary pill small"
              name="overview"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Chevron up icon
                </title>
                <path
                  d="M8 3l8 8-2 2-6-6-6 6-2-2 8-8z"
                />
                
              </svg>
              
               
              
               
              Overview (3)
              
            </button>
            
          </span>
        </div>
        
      </div>
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`Test navigation > Does render forward button non-last item 1`] = `
<body>
  <div>
    
    <div
      class="navigator"
    >
      <div
        class="button-container end"
      >
        <button
          aria-label="Go to next question"
          class="actionable primary circular medium"
          name="next"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon medium rtl-flip"
            viewBox="0 0 16 16"
          >
            <title>
              Arrow right icon
            </title>
            <path
              d="M8 16l-2-2 4.5-4.5H0v-3h10.5L6 2l2-2 8 8-8 8z"
              fill-rule="evenodd"
            />
            
          </svg>
          
           
          
           
          
        </button>
        
      </div>
       
      <div
        class="button-container start"
      >
        
      </div>
       
      
       
      
      <div
        class="progress-container"
      >
        <div
          class="width-tracker"
        >
          <div
            class="steps-container"
          >
            <div
              class="more"
            >
              
            </div>
            
             
            
             
            <div
              class="more"
            >
              
            </div>
            
          </div>
           
          <span
            class="overview-container"
          >
            <button
              aria-label="Open overview of all 3 questions"
              class="actionable secondary pill small"
              name="overview"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Chevron up icon
                </title>
                <path
                  d="M8 3l8 8-2 2-6-6-6 6-2-2 8-8z"
                />
                
              </svg>
              
               
              
               
              Overview (3)
              
            </button>
            
          </span>
        </div>
        
      </div>
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`Test navigation > Does render overview buttons for linear test 1`] = `
<body>
  <div>
    
    <div
      class="navigator"
    >
      <div
        class="button-container end"
      >
        <button
          aria-label="Go to next question"
          class="actionable primary circular medium"
          name="next"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon medium rtl-flip"
            viewBox="0 0 16 16"
          >
            <title>
              Arrow right icon
            </title>
            <path
              d="M8 16l-2-2 4.5-4.5H0v-3h10.5L6 2l2-2 8 8-8 8z"
              fill-rule="evenodd"
            />
            
          </svg>
          
           
          
           
          
        </button>
        
      </div>
       
      <div
        class="button-container start"
      >
        
      </div>
       
      
       
      
      <div
        class="progress-container"
      >
        <div
          class="width-tracker"
        >
          <div
            class="steps-container"
          >
            <div
              class="more"
            >
              
            </div>
            
             
            
             
            <div
              class="more"
            >
              
            </div>
            
          </div>
           
          <span
            class="overview-container"
          >
            <button
              aria-label="Open overview of all 3 questions"
              class="actionable secondary pill small"
              name="overview"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Chevron up icon
                </title>
                <path
                  d="M8 3l8 8-2 2-6-6-6 6-2-2 8-8z"
                />
                
              </svg>
              
               
              
               
              Overview (3)
              
            </button>
            
          </span>
        </div>
        
      </div>
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`Test navigation > Does render overview buttons for linear test 2`] = `
<body>
  <div>
    
    <div
      class="navigator"
    >
      <div
        class="button-container end"
      >
        <button
          aria-label="Go to next question"
          class="actionable primary circular small"
          name="next"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon medium rtl-flip"
            viewBox="0 0 16 16"
          >
            <title>
              Arrow right icon
            </title>
            <path
              d="M8 16l-2-2 4.5-4.5H0v-3h10.5L6 2l2-2 8 8-8 8z"
              fill-rule="evenodd"
            />
            
          </svg>
          
           
          
           
          
        </button>
        
      </div>
       
      <div
        class="button-container start"
      >
        
      </div>
       
      <div
        class="overview-btn-container"
      >
        <button
          aria-label="Open overview. Currently question 1 of 3"
          class="actionable secondary pill small"
          name="overview"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon medium"
            viewBox="0 0 16 16"
          >
            <title>
              Chevron up icon
            </title>
            <path
              d="M8 3l8 8-2 2-6-6-6 6-2-2 8-8z"
            />
            
          </svg>
          
           
          
           
          1 / 3
          
        </button>
        
      </div>
      
       
      
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`Test navigation > Does render prev button for linear test non-first item 1`] = `
<body>
  <div>
    
    <div
      class="navigator"
    >
      <div
        class="button-container end"
      >
        <button
          aria-label="Exit test review"
          class="actionable secondary pill medium"
          name="finish"
          type="button"
        >
          
           
          
           
          Exit test review
          
        </button>
        
      </div>
       
      <div
        class="button-container start"
      >
        <button
          aria-label="Go to previous question"
          class="actionable secondary circular medium"
          name="prev"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon medium rtl-flip"
            viewBox="0 0 16 16"
          >
            <title>
              Arrow left icon
            </title>
            <path
              d="M7.7-.13l2 2-4.5 4.5h10.5v3H5.2l4.5 4.5-2 2-8-8 8-8z"
              fill-rule="evenodd"
            />
            
          </svg>
          
           
          
           
          
        </button>
        
      </div>
       
      
       
      
      <div
        class="progress-container"
      >
        <div
          class="width-tracker"
        >
          <div
            class="steps-container"
          >
            <div
              class="more"
            >
              
            </div>
            
             
            
             
            <div
              class="more"
            >
              
            </div>
            
          </div>
           
          <span
            class="overview-container"
          >
            <button
              aria-label="Open overview of all 3 questions"
              class="actionable secondary pill small"
              name="overview"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Chevron up icon
                </title>
                <path
                  d="M8 3l8 8-2 2-6-6-6 6-2-2 8-8z"
                />
                
              </svg>
              
               
              
               
              Overview (3)
              
            </button>
            
          </span>
        </div>
        
      </div>
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`Test navigation > Doesnt render forward button last item 1`] = `
<body>
  <div>
    
    <div
      class="navigator"
    >
      <div
        class="button-container end"
      >
        <button
          aria-label="Exit test review"
          class="actionable secondary pill medium"
          name="finish"
          type="button"
        >
          
           
          
           
          Exit test review
          
        </button>
        
      </div>
       
      <div
        class="button-container start"
      >
        <button
          aria-label="Go to previous question"
          class="actionable secondary circular medium"
          name="prev"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon medium rtl-flip"
            viewBox="0 0 16 16"
          >
            <title>
              Arrow left icon
            </title>
            <path
              d="M7.7-.13l2 2-4.5 4.5h10.5v3H5.2l4.5 4.5-2 2-8-8 8-8z"
              fill-rule="evenodd"
            />
            
          </svg>
          
           
          
           
          
        </button>
        
      </div>
       
      
       
      
      <div
        class="progress-container"
      >
        <div
          class="width-tracker"
        >
          <div
            class="steps-container"
          >
            <div
              class="more"
            >
              
            </div>
            
             
            
             
            <div
              class="more"
            >
              
            </div>
            
          </div>
           
          <span
            class="overview-container"
          >
            <button
              aria-label="Open overview of all 3 questions"
              class="actionable secondary pill small"
              name="overview"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Chevron up icon
                </title>
                <path
                  d="M8 3l8 8-2 2-6-6-6 6-2-2 8-8z"
                />
                
              </svg>
              
               
              
               
              Overview (3)
              
            </button>
            
          </span>
        </div>
        
      </div>
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`Test navigation > Renders without error if testStateStore empty 1`] = `
<body>
  <div>
    
    <div
      class="navigator"
    >
      <div
        class="button-container end"
      >
        
      </div>
       
      <div
        class="button-container start"
      >
        
      </div>
       
      
       
      
      <div
        class="progress-container"
      >
        <div
          class="width-tracker"
        >
          <div
            class="steps-container"
          >
            <div
              class="more"
            >
              
            </div>
            
             
            
             
            <div
              class="more"
            >
              
            </div>
            
          </div>
           
          <span
            class="overview-container"
          >
            <button
              aria-label="Open overview of all items"
              class="actionable secondary pill small"
              name="overview"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon medium"
                viewBox="0 0 16 16"
              >
                <title>
                  Chevron up icon
                </title>
                <path
                  d="M8 3l8 8-2 2-6-6-6 6-2-2 8-8z"
                />
                
              </svg>
              
               
              
               
              Overview
              
            </button>
            
          </span>
        </div>
        
      </div>
      
      
    </div>
    
    
    
  </div>
</body>
`;
